test/parser/should_fail/pragma4.souc.bad
import Directovis

{^; ;^} ; cannot be empty
main() = do
    x <- 42 ; a comment
    print x ;}
